<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.golfeven.firstGolf"
    android:id="@+id/frame_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_"
    android:orientation="vertical" >

    <com.golfeven.firstGolf.widget.PullToRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_frame_mScoll"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.golfeven.firstGolf.widget.MainPageView 
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:id="@+id/frame_home_PageView"
                />
            <com.golfeven.firstGolf.widget.HomeNavigation
                app:title="@string/news"
                app:logo="@drawable/infor_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_home_nav_news"
                
                />
            <!-- <com.golfeven.firstGolf.widget.HomeNavigation
                app:title="@string/hotActivity"
                app:logo="@drawable/index_icon02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_home_nav_hotActivity"
                /> -->
            <com.golfeven.firstGolf.widget.HomeNavigation
                app:title="@string/gallery"
                app:logo="@drawable/pic_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_home_nav_gallery"
                />
            <com.golfeven.firstGolf.widget.HomeNavigation
                app:title="@string/ball_park"
                app:logo="@drawable/site_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_home_nav_ball_park"
                />
           <!--  <com.golfeven.firstGolf.widget.HomeNavigation
                app:title="@string/ball_team"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_home_nav_ball_team"
                /> -->
            
            <com.golfeven.firstGolf.widget.HomeNavigation
                app:title="@string/golfInfo"
                app:logo="@drawable/knowledge_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_home_nav_golfInfo"
                />
            <com.golfeven.firstGolf.widget.HomeNavigation
                app:title="@string/ball_friends"
                app:logo="@drawable/friend_icon"
                app:friend="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_home_nav_ball_friends"
                />
            </LinearLayout>

          
    </com.golfeven.firstGolf.widget.PullToRefreshLayout>

</LinearLayout>